[package]
name = "nano-vanity"
version = "0.4.8"
description = "Generate NANO cryptocurrency addresses with a given prefix"
keywords = ["cryptocurrency", "nanocurrency", "opencl"]
authors = ["Lee Bousfield <ljbousfield@gmail.com>"]
readme = "README.md"
repository = "https://github.com/PlasmaPower/nano-vanity"
license = "BSD-2-Clause"

[features]
gpu = ["ocl"]
default = ["gpu"]

[dependencies]
blake2 = "0.7.0"
clap = "2.30.0"
num_cpus = "1.8.0"
num-bigint = "0.1.43"
rand = "0.4.2"
hex = "0.3.1"
digest = "0.7.2"
num-traits = "0.2.0"
ocl = { version = "0.18.0", optional = true }
curve25519-dalek = "1.0.1"
ed25519-dalek = "0.8.1"
