[package]
name = "nano-vanity"
version = "0.4.14"
description = "Generate NANO cryptocurrency addresses with a given prefix"
keywords = ["cryptocurrency", "nanocurrency", "opencl"]
authors = ["Lee Bousfield <ljbousfield@gmail.com>"]
readme = "README.md"
repository = "https://github.com/PlasmaPower/nano-vanity"
license = "BSD-2-Clause"

[features]
gpu = ["ocl"]
default = ["gpu"]
apple = []

[dependencies]
blake2 = "0.9.1"
clap = "2.30.0"
num_cpus = "1.8.0"
num-bigint = "0.4.4"
rand = "0.7.0"
hex = "0.3.1"
digest = "0.9.0"
num-traits = "0.2.18"
ocl = { version = "0.19.0", optional = true, features = ["opencl_version_1_1", "opencl_version_1_2"] }
curve25519-dalek = "1.2.1"
byteorder = "1.3.2"
